[gd_scene load_steps=30 format=2]

[ext_resource path="res://player/player_controller.gd" type="Script" id=1]
[ext_resource path="res://player/HitBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://player/player_state_machine.gd" type="Script" id=3]
[ext_resource path="res://player/states/motion/on_ground/idle.gd" type="Script" id=4]
[ext_resource path="res://player/states/motion/on_ground/move.gd" type="Script" id=5]
[ext_resource path="res://player/states/motion/in_air/jump.gd" type="Script" id=6]
[ext_resource path="res://player/states/combat/stagger.gd" type="Script" id=7]
[ext_resource path="res://player/states/combat/attack.gd" type="Script" id=8]
[ext_resource path="res://player/states/die.gd" type="Script" id=9]
[ext_resource path="res://player/shadow.png" type="Texture" id=10]
[ext_resource path="res://player/Hero.png" type="Texture" id=11]
[ext_resource path="res://player/HeroIdle1.png" type="Texture" id=12]
[ext_resource path="res://player/weapon/weapon_pivot.gd" type="Script" id=13]
[ext_resource path="res://player/weapon/Sword.tscn" type="PackedScene" id=14]
[ext_resource path="res://player/health/Health.tscn" type="PackedScene" id=15]
[ext_resource path="res://fonts/SourceCodePro-Bold.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://player/states/debug/state-name-displayer.gd" type="Script" id=17]
[ext_resource path="res://Scenes/ShakingCamera.tscn" type="PackedScene" id=18]
[ext_resource path="res://interface/bar/stones_bar/LoveStone.png" type="Texture" id=19]
[ext_resource path="res://player/Torch.tscn" type="PackedScene" id=20]

[sub_resource type="Animation" id=1]

length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=2]

length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]

length = 1.0
loop = false
step = 0.1

[sub_resource type="DynamicFont" id=4]

size = 20
use_mipmaps = false
use_filter = true
font_data = ExtResource( 16 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Animation" id=5]

resource_name = "unlock_object"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("object:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2.34802, -302.532 ), Vector2( 2.34802, -137.539 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("object:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("object:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]

resource_name = "BeginAnim"
length = 7.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 2.3, 2.6, 2.9, 3.2, 3.5, 3.8, 4.1, 4.5, 5, 5.5, 6, 6.5, 7.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.206196 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.43298 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.675255 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 0.148706, 1, 1, 1 ), Color( 0.148706, 0.424863, 1, 1 ), Color( 1, 0.424863, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]

resource_name = "idle"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Torch:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Torch:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.896902 ) ]
}

[sub_resource type="Animation" id=9]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Torch:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.896902 ), Color( 1, 1, 1, 0 ) ]
}

[node name="PlayerV2" type="KinematicBody2D" index="0" groups=[
"Player",
]]

position = Vector2( 628.826, 391.266 )
scale = Vector2( 0.5, 0.5 )
input_pickable = false
collision_layer = 1
collision_mask = 18
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform", "Visibility" ]
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="HitBox" parent="." index="0" instance=ExtResource( 2 )]

editor/display_folded = true
scale = Vector2( 0.4, 0.4 )
collision_layer = 1
collision_mask = 8

[node name="StateMachine" type="Node" parent="." index="1"]

editor/display_folded = true
script = ExtResource( 3 )
START_STATE = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" index="0"]

script = ExtResource( 4 )

[node name="Move" type="Node" parent="StateMachine" index="1"]

script = ExtResource( 5 )
MAX_WALK_SPEED = 225.0
MAX_RUN_SPEED = 350.0
dashVelocityMultiplier = 3

[node name="Jump" type="Node" parent="StateMachine" index="2"]

script = ExtResource( 6 )
BASE_MAX_HORIZONTAL_SPEED = 400.0
AIR_ACCELERATION = 1000.0
AIR_DECCELERATION = 2000.0
AIR_STEERING_POWER = 50.0
JUMP_HEIGHT = 120.0
JUMP_DURATION = 0.8
GRAVITY = 1600.0

[node name="Stagger" type="Node" parent="StateMachine" index="3"]

script = ExtResource( 7 )
knockbackDuration = 0.2
knockbackDistance = 50

[node name="Attack" type="Node" parent="StateMachine" index="4"]

script = ExtResource( 8 )

[node name="Die" type="Node" parent="StateMachine" index="5"]

script = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/idle = SubResource( 1 )
anims/stagger = SubResource( 2 )
anims/walk = SubResource( 3 )
blend_times = [  ]

[node name="Shadow" type="Sprite" parent="." index="3"]

self_modulate = Color( 1, 1, 1, 0.361098 )
position = Vector2( 0, -4 )
texture = ExtResource( 10 )
_sections_unfolded = [ "Visibility" ]

[node name="BodyPivot" type="Position2D" parent="." index="4"]

editor/display_folded = true
_sections_unfolded = [ "Transform" ]

[node name="Body" type="Sprite" parent="BodyPivot" index="0"]

position = Vector2( 0, -58.8242 )
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 28, -2, 138, 245 )
_sections_unfolded = [ "Animation", "Region", "Transform" ]

[node name="Light2D" type="Light2D" parent="BodyPivot/Body" index="0"]

position = Vector2( 2.20117, -7.72668 )
scale = Vector2( 0.55, 0.55 )
enabled = true
editor_only = false
texture = ExtResource( 12 )
offset = Vector2( 0, 0 )
texture_scale = 1.0
color = Color( 0.839844, 0.839844, 0.839844, 1 )
energy = 1.0
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="WeaponPivot" type="Position2D" parent="." index="5"]

editor/display_folded = true
position = Vector2( 1.17401, -61.266 )
script = ExtResource( 13 )

[node name="Offset" type="Position2D" parent="WeaponPivot" index="0"]

position = Vector2( 110, 0 )

[node name="Sword" parent="WeaponPivot/Offset" index="0" instance=ExtResource( 14 )]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." index="6"]

position = Vector2( -6.43909, 41.2108 )
build_mode = 0
polygon = PoolVector2Array( -31.2603, 4.37152, -31.8271, -33.2269, 31.4667, -32.4712, 32.4114, 2.67108 )

[node name="Health" parent="." index="7" instance=ExtResource( 15 )]

[node name="StateNameDisplayer" type="Label" parent="." index="8"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -109.0
margin_top = -172.0
margin_right = 110.0
margin_bottom = -138.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "Test"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 17 )
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="ShakingCamera" parent="." index="9" instance=ExtResource( 18 )]

zoom = Vector2( 1.2, 1.2 )
_sections_unfolded = [ "Drag Margin", "Limit", "Smoothing", "Transform" ]
duration = 0.2
DAMP_EASING = 1.27456

[node name="Dash" type="Timer" parent="." index="10"]

process_mode = 1
wait_time = 0.2
one_shot = true
autostart = false

[node name="DashCD" type="Timer" parent="." index="11"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Tween" type="Tween" parent="." index="12"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="13"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="object" type="Sprite" parent="." index="14"]

visible = false
position = Vector2( 2.34802, -137.539 )
scale = Vector2( 0.310127, 0.310127 )
texture = ExtResource( 19 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="ObjectsAnimator" type="AnimationPlayer" parent="." index="15"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/unlock_object = SubResource( 5 )
blend_times = [  ]

[node name="Torch" parent="." index="16" instance=ExtResource( 20 )]

position = Vector2( -0.765991, -5.66443 )
rotation = -1.5708
scale = Vector2( 6, 6 )
color = Color( 1, 1, 1, 0 )
_sections_unfolded = [ "Shadow", "Transform" ]

[node name="CanvasModulate" type="CanvasModulate" parent="." index="17"]

color = Color( 1, 1, 1, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasModulate" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/BeginAnim = SubResource( 6 )
anims/idle = SubResource( 7 )
anims/lights_off = SubResource( 8 )
anims/lights_on = SubResource( 9 )
blend_times = [  ]

[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine" method="_on_animation_finished"]

[connection signal="timeout" from="Dash" to="StateMachine/Move" method="_on_Dash_timeout"]

[connection signal="timeout" from="DashCD" to="StateMachine/Move" method="_on_DashCD_timeout"]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]

[connection signal="animation_finished" from="ObjectsAnimator" to="." method="_on_StonesAnimator_animation_finished"]

[connection signal="animation_finished" from="CanvasModulate/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]


